--- a/src/app/stylesheets/meta-rating.component.scss
+++ b/src/app/stylesheets/meta-rating.component.scss
@@ -135,38 +135,4 @@ $graph-width: 300px;
     }
   }
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  .x-axis {
-    bottom: 0;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    li {
-      float: left;
-      margin-right: 10.5%;
-      font-size: 11px;
-      &:last-child {
-       margin-right: 0;
-      }
-    }
-  }
-  .y-axis {
-    position: absolute;
-    width: 100%;
-    li {
-      display: block;
-      height: $graph-height;
-      width: 99%;
-      span {
-        display: block;
-        font-size: 1em;
-        width: 40px;
-      }
-    }
-  }
-
 }
